# Procesor-stosowy

./: .gitignore  CMakeLists.txt  README.md  file.txt  input.txt  list.cpp  list.h  main.cpp  stack.cpp  stack.h
tests/: all_tests.txt
tests/test_10/: in.txt  out.txt
tests/test_11/: in.txt  out.txt
tests/test_13/: in.txt  out.txt
tests/test_14/: in.txt  out.txt
tests/test_15/: in.txt  out.txt
tests/test_16/: in.txt  out.txt
tests/test_17/: in.txt  out.txt
tests/test_18/: out.txt
tests/test_19/: in.txt  out.txt
tests/test_4/: in.txt  out.txt
tests/test_7/: in.txt  out.txt
